<resources>
    <string name="app_name">ReadWeather</string>
    <string name="navigation_item0">天气</string>
    <string name="navigation_item1">公交</string>
    <string name="navigation_item2">闲读</string>
    <string name="navigation_item3">妹子</string>
    <string name="srttings">设置</string>
    <string name="about">关于</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="photo_item0">保存</string>
    <string name="photo_item1">设为壁纸</string>
    <string name="no_more_many">别滑了，没有了(¬､¬) (￢_￢)</string>
    <string name="news">日报</string>
    <string name="switch_city">切换城市</string>
</resources>
